Changelog
=========

1.1 (unreleased)
----------------
- Added support for plone.app.folder if installed (conditional include)
- Added shadow to drop-down box
- Added handy class names to top-level ``li`` elements for styling purposes:
  ``top-level-1``, ``top-level-2``, ... ``top-level-last``
- Added handy class names to prev/next-to ``active`` drop-down ``li`` element


1.0 (2011-04-23)
----------------

- Megamenu implementation with Collage
- Native support for ATFolder
- i18n support: English and Spanish translations
- Tested in Plone 3.3.5 and Plone 4.0.3